@@ -1,70 +1,71 @@
 package com.example.certificateservice.util;
 
-import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.JwtParser;
+import io.jsonwebtoken.*;
 import io.jsonwebtoken.security.Keys;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import javax.crypto.SecretKey;
-import java.util.Base64;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Component
 public class JwtUtil {
 
     @Value("${jwt.secret}")
-    private String SECRET_KEY;
+    private String secretKey;
 
     private SecretKey getSigningKey() {
-        byte[] keyBytes = Base64.getDecoder().decode(SECRET_KEY);
+        byte[] keyBytes = Base64.getDecoder().decode(secretKey);
         return Keys.hmacShaKeyFor(keyBytes);
     }
+
+    public Claims extractAllClaims(String token) {
+        return Jwts.parserBuilder()
+                .setSigningKey(getSigningKey())
+                .build()
+                .parseClaimsJws(token)
+                .getBody();
+    }
+
+    public <T> T extractClaim(String token, Function<Claims, T> claimsResolver) {
+        final Claims claims = extractAllClaims(token);
+        return claimsResolver.apply(claims);
+    }
+
+    public String extractUsername(String token) {
+        return extractClaim(token, Claims::getSubject);
+    }
+
     public List<String> extractRoles(String token) {
-        Claims claims = extractAllClaims(token);
-        Object rolesObj = claims.get("role");
+        Object rolesObj = extractAllClaims(token).get("roles");
 
         if (rolesObj instanceof List<?>) {
             return ((List<?>) rolesObj).stream()
                     .map(Object::toString)
-                    .toList();
+                    .collect(Collectors.toList());
         } else if (rolesObj instanceof String) {
-            return List.of(rolesObj.toString());
+            return Collections.singletonList(rolesObj.toString());
         }
 
-        return List.of(); // fallback
+        return Collections.emptyList(); // fallback
     }
-
-
-
-    public Claims extractAllClaims(String token) {
-        JwtParser parser = Jwts.parserBuilder()
-                .setSigningKey(getSigningKey())
-                .build();
-        return parser.parseClaimsJws(token).getBody();
-    }
-
-    public String extractUsername(String token) {
-        return extractAllClaims(token).getSubject();
-    }
-
 
 
     public boolean isTokenValid(String token) {
         try {
-            extractAllClaims(token);
-            return true;
-        } catch (Exception e) {
+            Claims claims = extractAllClaims(token);
+            return !claims.getExpiration().before(new Date());
+        } catch (ExpiredJwtException e) {
+            return false;
+        } catch (JwtException e) {
             return false;
         }
     }
+
     public Long extractUserId(String token) {
         Claims claims = extractAllClaims(token);
-        return claims.get("userId", Long.class);  // Assuming your token includes "userId"
+        return claims.get("userId", Long.class); // only works if "userId" is stored as a claim
     }
-
-
 }
